# gluk

./: .gitignore  CMakeLists.txt  README.md  setup.bat  test_gluk.cpp
cmake_modules/: FindGLEW.cmake  FindGLFW.cmake
inc/: app.h  bo_file.h  cmmn.h  device.cpp  device.h  mesh.h  render_target.h  renderer2d.h  shader.h  texture.h  timer.h  util.h
inc/gluk/: app.h  cmmn.h  cmmn.h~  device.h  freetype-gl.h  mesh.h  render_target.h  renderer2d.h  shader.h  texture.h  util.h
smp/car/: basic.ps.glsl  main.cpp  mdl.fbx  postprocess.ps.glsl
smp/shadows/: .main.cpp.swp  basic.ps.glsl  main.cpp
smp/simple/: .main.cpp.swp  basic.ps.glsl  main.cpp  postprocess.ps.glsl
src/: .app.cpp.swp  app.cpp  app.cpp~  basic.ps.glsl  basic.vs.glsl  cmmn.cpp  device.cpp  freetype-gl.cpp  mesh.cpp  pix_format.i  render_target.cpp  renderer2d.cpp  renderer2d.ps.glsl  renderer2d.vs.glsl  shader.cpp  util.cpp
src/soil/: image_DXT.c  stb_image_aug.c
txcv/: CMakeLists.txt  test.tex  testcm.tex
txcv/src/: main.cpp
